##################################################################################
# CMakeLists.txt for the application
##################################################################################

add_avr_executable(
   dabling
   dabling.c
   dabling.h
)

##################################################################################
# find avr-libc
##################################################################################
find_library(C_LIB c)
message(STATUS "avr-libc: ${C_LIB}")

##################################################################################
# link elf target to libraries
##################################################################################
target_link_libraries(
   dabling-${AVR_MCU}.elf
   adc-${AVR_MCU}
   timer-${AVR_MCU}
   #   module_config-${AVR_MCU}
   ${C_LIB}
)

#################################################################################
